EATON-109 proudct family card

--- a/eaton.frontend/src/components/link-list/css/views/_view-2column.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-2column.scss
@@ -1,6 +1,12 @@
 .eaton-linklist-2column {
   overflow: hidden;
 
+  & > div {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
   &__link {
     margin-bottom: $spacing__sm;
   }
