Fix Linting Errors + Add visual indication - External submitting form (in Progress)

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-inline.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-inline.html
@@ -13,7 +13,7 @@
       <div class="form-group">
         <label for="mega-menu-search" class="sr-only">${data.header}</label>
           <input type="text" name="search-term" class="form-control eaton-search--inline__form-input" id="mega-menu-search" placeholder="${data.form.placeholder}">
-          <button type="submit" class="eaton-search__submit eaton-search--inline__form-submit">
+          <button type="submit" class="button--reset eaton-search__submit eaton-search--inline__form-submit">
             <span class="sr-only">${data.form.submitLabel}</span>
             <i class="icon icon-search" aria-hidden="true"></i>
           </button>
