--- a/eaton.frontend/src/components/header/css/_header-search.scss
+++ b/eaton.frontend/src/components/header/css/_header-search.scss
@@ -31,6 +31,6 @@
   @include media-desktop-and-up {
     position: absolute;
     z-index: 10;
-    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.45);
+    box-shadow: 0 10px 10px 0 rgba(0,0,0,0.45);
   }
 }
