--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -238,7 +238,7 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 @media all and (min-width: 992px) { [data-mobile-rendition] { min-width: 0; } }
 
-.button--reset { border: 0; border-radius: 0; background: none; padding: 0; }
+.button--reset { border: 0; border-radius: 0; background: none; padding: 0; -webkit-appearance: none; -moz-appearance: none; appearance: none; }
 
 .b-button { background: none; text-shadow: none; border-radius: 0; border-style: solid; display: inline-block; font-weight: bold; max-width: 600px; }
 
