--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-inline.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-inline.html
@@ -13,6 +13,12 @@
       <div class="form-group">
         <label for="mega-menu-search" class="sr-only">${data.header}</label>
           <input type="text" name="search-term" class="form-control eaton-search--inline__form-input" id="mega-menu-search" placeholder="${data.form.placeholder}">
+
+          <div data-sly-test="${data.form.isExternal}" class="eaton-search--inline__form-external">
+            <span class="sr-only">Submit form in new Tab</span>
+            <i class="icon icon-link-external" aria-hidden="true"></i>
+          </div>
+
           <button type="submit" class="button--reset eaton-search__submit eaton-search--inline__form-submit">
             <span class="sr-only">${data.form.submitLabel}</span>
             <i class="icon icon-search" aria-hidden="true"></i>
