test data for `title-text-image-link-list`  view=“category-hero”

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-category-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-category-hero.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.data="../data/view-category-hero-data.js">
+<sly data-sly-use.data="${'../data/view-category-hero-data.js' @testdata=properties.testdata}">
     <div class="eaton-ttil-list-category-hero">
         <div class="row">
             <div class="col-xs-12">
