Rename - Primary Nav View & associated dialog, views, data

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-default.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.data="${'../data/view-primary-nav-data.js' @testdata=properties.testdata}">
+<sly data-sly-use.data="${'../data/view-default-data.js' @testdata=properties.testdata}">
   <div class="eaton-search eaton-search--default" data-predictive-search="${data.searchUrl}">
     <div class="container">
       <div class="row">
