Cleanup `secondary nav` view (M-47) and rename references (stylesheets)

--- a/eaton.frontend/src/components/search-box/css/search-box.scss
+++ b/eaton.frontend/src/components/search-box/css/search-box.scss
@@ -7,9 +7,7 @@
 
 // Import SubViews
 @import "views/view-inline";
-@import "views/view-primary-nav";
-@import "views/view-secondary-search-box";
-
+@import "views/view-default";
 
 .eaton-search {
   .form-control { // Styles for Form Elements
