--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/category-highlight/css/category-highlight.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/category-highlight/css/category-highlight.css
@@ -1,5 +1,7 @@
-.category-highlight-list-container { margin-top: -5%; }
+@media screen and (max-width: 767px) { .eaton-category-highlight__bottom { margin-top: -15%; } }
 
-@media only screen and (max-width: 767px) { .category-highlight-list-container { margin-top: -15%; } }
+@media screen and (min-width: 768px) and (max-width: 991px) { .eaton-category-highlight__bottom { margin-top: -13%; } }
 
-@media only screen and (min-width: 768px) and (max-width: 991px) { .category-highlight-list-container { margin-top: -13%; } }
+@media screen and (min-width: 992px) { .eaton-category-highlight__bottom { margin-top: -5%; } }
+
+.aem-AuthorLayer-Edit .eaton-category-highlight__bottom, .cq-wcm-edit .eaton-category-highlight__bottom { margin-top: 0; }
