--- a/eaton.frontend/src/components/breadcrumb/css/breadcrumb.scss
+++ b/eaton.frontend/src/components/breadcrumb/css/breadcrumb.scss
@@ -25,24 +25,29 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
+    display: flex;
+  }
 
-    &-item {
-      font-size: 14px;
-      margin-right: 5px;
-      display: inline;
+  &__list-item {
+    align-items: center;
+    font-size: 14px;
+    margin-right: 5px;
+    display: flex;
+    flex-direction: row;
+    flex-flow: nowrap;
 
-      span {
-        font-size: 10px;
+    .icon {
+      font-size: 10px;
+      padding: 0 4px;
+    }
+
+    &:last-child {
+      a {
+        color: $color__black;
       }
 
-      &:last-child {
-        a {
-          color: $color__black;
-        }
-
-        span {
-          display: none;
-        }
+      .icon {
+        display: none;
       }
     }
   }
