--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/breadcrumb/css/breadcrumb.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/breadcrumb/css/breadcrumb.css
@@ -2,12 +2,12 @@
 
 .eaton-breadcrumb { background: #EEF0F2; padding: 1rem 0; }
 
-.eaton-breadcrumb__list { list-style-type: none; margin: 0; padding: 0; }
+.eaton-breadcrumb__list { list-style-type: none; margin: 0; padding: 0; display: -webkit-box; display: -ms-flexbox; display: flex; }
 
-.eaton-breadcrumb__list-item { font-size: 14px; margin-right: 5px; display: inline; }
+.eaton-breadcrumb__list-item { -webkit-box-align: center; -ms-flex-align: center; align-items: center; font-size: 14px; margin-right: 5px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; -ms-flex-flow: nowrap; flex-flow: nowrap; }
 
-.eaton-breadcrumb__list-item span { font-size: 10px; }
+.eaton-breadcrumb__list-item .icon { font-size: 10px; padding: 0 4px; }
 
 .eaton-breadcrumb__list-item:last-child a { color: #000; }
 
-.eaton-breadcrumb__list-item:last-child span { display: none; }
+.eaton-breadcrumb__list-item:last-child .icon { display: none; }
