[EATON-328] FIX Specifications (PDH) - Alignment of Titles should be aligned to the end of the column

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-table/css/module-table.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-table/css/module-table.css
@@ -1,4 +1,4 @@
-.module-table__head { margin-top: 0; margin-bottom: 22px; }
+.module-table__head { margin-top: 0; margin-bottom: 22px; padding-left: 20px; }
 
 .module-table__row:nth-child(odd) { background-color: #EEF0F2; }
 
