--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-specifications/css/product-specifications.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-specifications/css/product-specifications.css
@@ -1,10 +1,8 @@
 .product-specifications { padding: 20px 0; }
 
-.product-specifications .value-type-document, .product-specifications .value-type-image, .product-specifications .value-type-default { display: inline-block; margin-right: 1rem; }
-
 .product-specifications .value-type-link { margin-right: 1rem; }
 
-.product-specifications .value-type-image a { display: block; }
+.product-specifications .value-type-image a { display: inline-block; }
 
 .product-specifications .value-type-image img { width: 100%; height: auto; max-width: 43px; max-height: 43px; vertical-align: middle; }
 
