[M60] Cleanup Search Results Component

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-tabs.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-tabs.html
@@ -1,7 +1,7 @@
 <!--/* M-59: Tabs */-->
 <template data-sly-template.module="${ @ data }">
 
-  <div class="module-tabs hidden-xs hidden-sm">
+  <div class="module-tabs u-visible-desktop">
     <div class="container">
       <ul class="module-tabs__list">
 
