--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/view-default.html
@@ -1,13 +1,10 @@
-<sly data-sly-use.data="${ '../data/view-default-data.js' @testdata=properties.testdata }">
+<sly data-sly-use.data="${ '../data/search-results-data.js' @testdata=properties.testdata }">
 
   <!--/* Results Tabs */-->
-  <div class="row">
-    <div class="col-xs-12">
-      <sly data-sly-use.tpl="../../shared/templates/module-tabs.html">
-        <sly data-sly-call="${ tpl.module @ data=data.tabs }"></sly>
-      </sly>
-    </div>
-  </div>
+  <sly data-sly-use.tpl="../../shared/templates/module-tabs.html">
+    <sly data-sly-call="${ tpl.module @ data=data.tabs }"></sly>
+  </sly>
+
 
 
   <div class="search-results-default">
