--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/view-simple.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/view-simple.html
@@ -1,5 +1,4 @@
-<sly data-sly-use.data="${ '../data/view-default-data.js' @testdata=properties.testdata }">
-
+<sly data-sly-use.data="${ '../data/search-results-data.js' @testdata=properties.testdata }">
 
 
   <div class="search-results-simple">
