--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-product-tab.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-product-tab.html
@@ -6,8 +6,8 @@
       <sly data-sly-test="${ data.graphicToggle }" >
         <!-- inputs neeeded for tab behavior -->
         <input
-          data-sly-repeat="${data.tabs}"
           id="tab-${itemList.index}"
+          data-sly-repeat="${data.tabs}"
           data-sly-attribute.checked="${item.selected}"
           type="radio"
           name="product-tab"
@@ -18,8 +18,8 @@
         <div class="col-md-4">
           <div class="eaton-product-tabs__description">
             <a href="${data.eyebrowCta.href}"
-               class="b-eyebrow-small"
-               aria-label="Go to ${data.eyebrowCta.title}" >
+              class="b-eyebrow-small"
+              aria-label="Go to ${data.eyebrowCta.title}" >
               <i class="icon icon-chevron-left" aria-hidden="true"></i>
                 ${data.eyebrowCta.title}
             </a>
@@ -42,13 +42,13 @@
             <!-- graphicToggle with <a> -->
             <sly data-sly-test="${ !data.graphicToggle }" >
               <a data-sly-repeat="${data.tabs}"
-                 href="${item.href}"
-                 target="${item.target}"
-                 aria-label="Go to ${item.title}"
+                href="${item.href}"
+                target="${item.target}"
+                aria-label="Go to ${item.title}"
               >
                 <label for="tab-${itemList.index}" class="${item.selected ? 'tab-active' : ''}" >
-                    <i class="icon icon-${item.icon}" aria-hidden="true"></i>
-                    <span>${item.title}</span>
+                  <i class="icon icon-${item.icon}" aria-hidden="true"></i>
+                  <span>${item.title}</span>
                 </label>
               </a>
             </sly>
@@ -58,11 +58,11 @@
         <div class="col-md-3 u-text-center eaton-product-tabs__dropdown-container">
           <div class="dropdown">
             <button id="dHowtoBuy"
-                    class="eaton-product-tabs__dropdown button--reset"
-                    type="button"
-                    data-toggle="dropdown"
-                    aria-haspopup="true"
-                    aria-expanded="false" >
+              class="eaton-product-tabs__dropdown button--reset"
+              type="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false" >
               ${data.dropdown.label}
               <i class="icon icon-chevron-down" aria-hidden="true"></i>
             </button>
@@ -71,9 +71,9 @@
                 aria-labelledby="dHowtoBuy" >
               <li>
                 <a href="${item.href}"
-                   target="${item.target}"
-                   aria-label="Go to ${item.title}" >
-                  <i class="icon icon-${item.icon}" aria-hidden="true"></i><span>${item.title}</span>
+                 target="${item.target}"
+                 aria-label="Go to ${item.title}" >
+                <i class="icon icon-${item.icon}" aria-hidden="true"></i><span>${item.title}</span>
                 </a>
               </li>
             </ul>
@@ -82,9 +82,15 @@
       </div>
 
       <div class="row eaton-product-tabs__page-utility">
-        <sly data-sly-resource="${'back-to-search' @ resourceType='/apps/eaton/static-components/product/back-to-search'}"></sly>
-        <sly data-sly-resource="${'share-cta' @ resourceType='/apps/eaton/static-components/product/share-cta'}"></sly>
-        <sly data-sly-resource="${'live-chat' @ resourceType='/apps/eaton/static-components/product/live-chat-cta'}"></sly>
+        <div data-sly-unwrap="${!wcmmode.edit}">
+          <sly data-sly-resource="${'back-to-search' @ resourceType='/apps/eaton/static-components/product/back-to-search'}"></sly>
+        </div>
+        <div data-sly-unwrap="${!wcmmode.edit}">
+          <sly data-sly-resource="${'share-cta' @ resourceType='/apps/eaton/static-components/product/share-cta'}"></sly>
+        </div>
+        <div data-sly-unwrap="${!wcmmode.edit}">
+          <sly data-sly-resource="${'live-chat' @ resourceType='/apps/eaton/static-components/product/live-chat-cta'}"></sly>
+        </div>
       </div>
 
       <sly data-sly-test="${ data.graphicToggle }">
@@ -96,7 +102,9 @@
             <sly data-sly-test="${ wcmmode.edit }">
               <div class="alert alert-warning">Content on tab 1</div>
             </sly>
-            <sly data-sly-resource="${'content-tab-0' @ resourceType='wcm/foundation/components/parsys'}"></sly>
+            <div data-sly-unwrap="${!wcmmode.edit}">
+              <sly data-sly-resource="${'content-tab-1' @ resourceType='wcm/foundation/components/parsys'}"></sly>
+            </div>
           </div>
           <div
             class="col-sm-12 eaton-product-tabs__tab-panel"
@@ -104,7 +112,9 @@
             <sly data-sly-test="${ wcmmode.edit }">
               <div class="alert alert-warning">Content on tab 2</div>
             </sly>
-            <sly data-sly-resource="${'content-tab-1' @ resourceType='wcm/foundation/components/parsys'}"></sly>
+            <div data-sly-unwrap="${!wcmmode.edit}">
+              <sly data-sly-resource="${'content-tab-2' @ resourceType='wcm/foundation/components/parsys'}"></sly>
+            </div>
           </div>
           <div
             class="col-sm-12 eaton-product-tabs__tab-panel"
@@ -112,7 +122,9 @@
             <sly data-sly-test="${ wcmmode.edit }">
               <div class="alert alert-warning">Content on tab 3</div>
             </sly>
-            <sly data-sly-resource="${'content-tab-2' @ resourceType='wcm/foundation/components/parsys'}"></sly>
+            <div data-sly-unwrap="${!wcmmode.edit}">
+              <sly data-sly-resource="${'content-tab-3' @ resourceType='wcm/foundation/components/parsys'}"></sly>
+            </div>
           </div>
         </div>
       </sly>
